# sputnik-repo

./: README.md
catkin_ws/: output.pcd
catkin_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/lib/beginner_tutorials/: tester
catkin_ws/devel/lib/pkgconfig/: beginner_tutorials.pc  my_dynamixel_tutorial.pc  system3d.pc
catkin_ws/devel/lib/system3d/: img3D  testfinal
catkin_ws/src/beginner_tutorials/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
catkin_ws/src/my_dynamixel_tutorial/: CMakeLists.txt  controller_manager.launch  controller_manager.launch~  package.xml  package.xml~
catkin_ws/src/system3d/: CMakeLists.txt  CMakeLists.txt~  package.xml
catkin_ws/src/system3d/src/: img3D.cpp  img3D.cpp~  object_recognition.cpp  system3D.cpp  system3D.cpp~  testfinal.cpp  testfinal.cpp~
fuerte_workspace/: .rosinstall  .rosinstall.bak  Notas.txt  frames.gv  setup.sh  tester.cpp~
fuerte_workspace/docus/: DissertaЗ╞o.docx  Tese - Notas.odt  medidas servo.odt  test  tester.cpp
fuerte_workspace/my_dynamixel_tutorial/my_dynamixel_tutorial/: controller_manager.launch  controller_manager.launch~  manifest.xml  tilt.yaml  tilt.yaml~
fuerte_workspace/sandbox/beginner_tutorials/: CMakeLists.txt  CMakeLists.txt~  manifest.xml  manifest.xml~  params.yaml
fuerte_workspace/sandbox/learning_tf/: CMakeLists.txt  CMakeLists.txt~  manifest.xml
fuerte_workspace/sandbox/sonar_servo_tf/: mainpage.dox  manifest.xml
fuerte_workspace/sandbox/system3D/: CMakeLists.txt  CMakeLists.txt~  mainpage.dox  manifest.xml  manifest.xml~
fuerte_workspace/sonar/: DeltaT_External_Control_UDP.cpp  ExternalControl.cpp  Linux_DeltaT.INI  Linux_DeltaT_back.INI  l  sonar
fuerte_workspace/sonar/Windows/: wreck1.837
fuerte_workspace/sonar/records/: 09JAN2013-142857.837  09JAN2013-143136.837  10JAN2013-153738.837
fuerte_workspace/turtlebot/.hg/: dirstate  hgrc  undo.desc
(+212 files in other folders)
