<?xml version="1.0"?>
<package>
  <name>my_dynamixel_tutorial</name>
  <version>0.0.0</version>
  <description>Dynamixel rotor package</description>

  <maintainer email="salgadobb@hotmail.com">Pedro Salgado</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/my_dynamixel_tutorial</url>
  <author email="salgadobb@hotmail.com">Pedro Salgado</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamixel_controllers</build_depend>
  <run_depend>dynamixel_controllers</run_depend>

</package>
