<?xml version="1.0"?>
<package>
  <name>system3d</name>
  <version>0.0.0</version>
  <description>The system3D package</description>

  <maintainer email="salgadobb@hotmail.com">Pedro Salgado</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/system3d</url>
  <author email="salgadobb@hotmail.com">Pedro Salgado</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>beginner_tutorials</build_depend>
  <build_depend>dynamixel_controllers</build_depend>
  <build_depend>dynamixel_driver</build_depend>
  <build_depend>dynamixel_msgs</build_depend>
  <build_depend>my_dynamixel_tutorial</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>beginner_tutorials</run_depend>
  <run_depend>dynamixel_controllers</run_depend>
  <run_depend>dynamixel_driver</run_depend>
  <run_depend>dynamixel_msgs</run_depend>
  <run_depend>my_dynamixel_tutorial</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
